# NotesApp

./: .coverage  .env  .gitignore  README.md  locustfile.py  notes.db  pyproject.toml
.github/workflows/: main.yml
app/: auth.py  db.py  main.py  translation.py
app/models/: note.py  user.py
app/routers/: notes.py  users.py
app/schemas/: note.py
frontend/: app.py
tests/: confest.py  conftest.py  test_notes.py  test_notes_unit.py  test_translation.py  test_users.py  test_users_unit.py
