[project]
name = "notesapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Galia",email = "g.shabanova@innopolis.university"}
]

readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "deep-translator (>=1.11.4,<2.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "coverage (>=7.8.0,<8.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "bandit (>=1.8.3,<2.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false